--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  background-color: #f4f4f4;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +11,134 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.header{
+  height: 60px;
+  width: 100%;
+  background-color: rgb(21, 61, 108);
+  border-bottom: 10px solid #B99D64;
+}
+
+.header-links-container{
+  height: 100%;
+  width: 20%;
+  float: right;
+  position: relative;
+  right: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.schedule-session-button {
+  border: 2px solid transparent; 
+  background-color: white;
+  height: 20%; 
+  width: 120px;
+  padding: 10px;
+  border-radius: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: serif;
+  color: black;
+  font-size: 13px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: all 0.4s ease;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  position: relative;
+  overflow: hidden;
+}
+
+.schedule-session-button span {
+  z-index: 1;
+}
+
+.schedule-session-button svg {
+  z-index: 1;
+  margin-right: 5px;
+  font-size: 18px;
+  transition: transform 0.4s ease;
+}
+
+.schedule-session-button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 300%;
+  height: 300%;
+  background: rgba(173, 216, 230, 0.5);
+  transform: rotate(45deg);
+  transition: all 0.4s ease;
+}
+
+.schedule-session-button:hover::before {
+  left: 0;
+}
+
+.schedule-session-button:hover {
+  background-color: rgb(21, 61, 108);
+  color: white;
+  border-color: white;
+  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
+}
+
+.schedule-session-button:hover svg {
+  transform: scale(1.2);
+}
+
+
+
+.logo-section{
+  padding: 0 30px;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 80px;
+}
+
+.logo{
+  height: 100px;
+  width: 100px;
+  background-color: white;
+  border-radius: 50%;
+  position: absolute;
+  top: -20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo img {
+  width: 55%;
+  height: auto;
+}
+
+.unit-name {
+  height: 90%;
+  position: absolute;
+  left: 130px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  text-align: left;
+  color: rgb(21, 61, 108);
+}
+
+.university-name {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.ghana {
+  font-size: 18px; 
+  font-weight: bold;
+}
+
+.unit {
+  font-size: 7px;
+  font-weight: normal;
 }
