--- a/src/index.css
+++ b/src/index.css
@@ -549,3 +549,45 @@ code {
 .social-icon:hover {
   color: #B99D64;
 }
+
+/* --------PHOTOBOOK STYLING-------- */
+.photobook {
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  background-color: #f5f5f5;
+  padding: 20px 0;
+}
+
+.photo-row {
+  display: flex;
+  animation: scroll-left 30s linear infinite;
+  margin: 20px;
+}
+
+.photo-row:nth-child(2) {
+  animation-delay: -7.5s; /* Offset for the second row */
+}
+
+.photo {
+  flex: 0 0 350px; /* Image width */
+  margin: 0 10px; /* Spacing between images */
+  height: 300px;
+  border: 1px solid red;
+}
+
+.photo img {
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+@keyframes scroll-left {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
