--- a/src/index.css
+++ b/src/index.css
@@ -591,3 +591,93 @@ code {
     transform: translateX(-50%);
   }
 }
+
+
+/*------BOOKING SESSION-----*/
+.booking-session {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  font-family: Arial, sans-serif;
+}
+
+.booking-title {
+  font-size: 24px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.form-container {
+  border-top: 1px solid #ccc;
+  padding-top: 20px;
+}
+
+.form-row {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 50px;
+}
+
+.form-group {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+label {
+  font-size: 14px;
+  margin-bottom: 5px;
+  color: #333;
+}
+
+label span {
+  color: red;
+}
+
+input, select, textarea {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 14px;
+  width: 100%;
+  box-sizing: border-box;
+  background-color: rgba(234, 233, 233, 1);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
+}
+
+textarea {
+  resize: none;
+}
+
+input::placeholder,
+textarea::placeholder {
+  color: #aaa;
+  font-size: 13px;
+}
+
+button.confirm-button {
+  display: block;
+  margin: 20px auto 0;
+  padding: 10px 30px;
+  font-size: 16px;
+  color: white;
+  background-color: black;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+}
+
+button.confirm-button:hover {
+  background-color: #444;
+}
+
+.full-width {
+  flex: 1;
+  margin-top: 70px;
+}
+
+@media (max-width: 768px) {
+  .form-row {
+    flex-direction: column;
+  }
+}
