--- a/src/index.css
+++ b/src/index.css
@@ -513,6 +513,7 @@ code {
   font-size: 20px;
   margin-bottom: 10px;
   color: #B99D64;
+  text-align: left;
 }
 
 .footer-division p {
@@ -599,6 +600,7 @@ code {
   margin: 0 auto;
   padding: 20px;
   font-family: Arial, sans-serif;
+  margin-bottom: 50px;
 }
 
 .booking-title {
