--- a/src/index.css
+++ b/src/index.css
@@ -659,8 +659,10 @@ textarea::placeholder {
 }
 
 button.confirm-button {
-  display: block;
-  margin: 20px auto 0;
+  display: flex;
+  /* margin: 20px auto 0; */
+  position: relative;
+  left: 680px;
   padding: 10px 30px;
   font-size: 16px;
   color: white;
@@ -703,7 +705,7 @@ button.confirm-button:hover {
 .summary-container {
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 30px;
 }
 
 .summary-item label {
@@ -714,9 +716,12 @@ button.confirm-button:hover {
 }
 
 .summary-input {
-  height: 40px;
+  height: 20px;
   border-radius: 5px;
   background-color: rgba(234, 233, 233, 1);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border: none;
+  text-align: left;
+  color: #615f5f;
+  padding: 20px 20px;
 }
